Add and remove background color effects.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                   <h2 class="clickable">Click to hide image!</h2>
                 </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" id="flotationbg">
             <h2>Flotation Device Instructions</h2>
               <div id="flotation-hidden">
                 <h2 class="hover">Hover to see image!</h2>
@@ -30,7 +30,7 @@
                 <img src="img/flotations.jpg">
               </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" id="evacuationbg">
             <h2>Evacuation Instructions</h2>
                 <h2 class="slidetoggle">Hover to see image!</h2>
               <div id="evacuation-showing">
